crates/test-files/fixtures/compile_errors/return_lt_mixed_types.fe
contract Foo {
    pub fn bar(x: u128, y: u256) -> bool {
        return x < y
    }
}
